--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "node server.js",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
   "type": "module",
   "dependencies": {
     "ajv": "^8.18.0",
+    "dotenv": "^17.3.1",
+    "express": "^4.21.0",
+    "express-session": "^1.19.0",
     "openai": "^6.25.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
