--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "annual-review-story-kit",
   "version": "0.1.0",
   "private": true,
+  "engines": { "node": ">=20.0.0" },
   "description": "AnnualReview.dev",
   "homepage": "https://annualreview.dev",
   "scripts": {
@@ -28,7 +29,7 @@
     "@testing-library/react": "^16.3.2",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^4.0.18",
-    "jsdom": "^23.2.0",
+    "jsdom": "^28.1.0",
     "vite": "^6.0.3",
     "vitest": "^4.0.18"
   }
