Rails 1:1 port: remove Node server, add GET /api/jobs + evidence-in-body generate
- Add GET /api/jobs (latest job for user); store latest_job_id on User
- POST /api/generate accepts evidence JSON in body (1:1 with Node)
- Remove server.ts, server/, and server-only lib/ (auth, cookies, session-store, job-store, collect-and-normalize)
- Remove obsolete tests for deleted server code
- Vite always proxies to Rails; remove in-process API plugin
- Add development queue DB and Solid Queue config for foreman start
- script/foreman-start + yarn dev:full to free ports 5173/3000 then start
- Procfile: clear stale Rails pid; vite strictPort on 5173
- Root redirect from Rails to FRONTEND_URL so opening :3000 shows app
- README: Rails-only backend, dev:full, production Docker
- Rubocop autocorrect (Layout/SpaceInsideArrayLiteralBrackets)

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "collect": "node --import tsx/esm scripts/collect-github.ts",
     "generate": "node --import tsx/esm scripts/generate-review.ts",
     "dev": "vite",
+    "dev:full": "./script/foreman-start",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "start": "node --import tsx/esm server.ts",
     "typecheck": "tsc --noEmit"
   },
   "type": "module",
