--- a/.dockerignore
+++ b/.dockerignore
@@ -5,9 +5,12 @@
 *.log
 node_modules
 dist
-backend/log/*
-backend/tmp/*
-backend/storage/*
-backend/.git
-backend/node_modules
+frontend/dist
+frontend/node_modules
+frontend/coverage
+frontend/.vite
+backend/log
+backend/tmp
+backend/storage
+backend/.bundle
 backend/config/master.key
