--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
           cache: "yarn"
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --ignore-engines
 
-      - name: Test
+      - name: Test (CLI + frontend)
         run: yarn test
 
-      - name: Build
+      - name: Build frontend
         run: yarn build
