--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,18 +4,20 @@
 FROM node:22-alpine AS build
 WORKDIR /app
 
+# Copy workspace and sources (frontend imports ../../lib, ../../types)
 COPY package.json yarn.lock ./
+COPY frontend/ ./frontend/
+COPY lib/ ./lib/
+COPY types/ ./types/
+
 RUN yarn install --frozen-lockfile --ignore-engines
 
-COPY index.html vite.config.ts tsconfig.json ./
-COPY src ./src
-COPY public ./public
-
+WORKDIR /app/frontend
 ENV NODE_ENV=production
 RUN yarn build
 
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/frontend/dist /usr/share/nginx/html
 COPY deploy/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
